rgbds-0.6.1/test/asm/pops-restore-no-section.err
error: pops-restore-no-section.asm(9):
    Label "DisallowedContent" created outside of a SECTION
error: pops-restore-no-section.asm(10):
    Cannot output data outside of a SECTION
error: Assembly aborted (2 errors)!
