rgbds-0.6.1/test/asm/pops-restore-no-section.asm
PUSHS

SECTION "Test", ROM0
SomeContent:
	db 1, 2, 3, 4, 5, 6, 7, 8, 9

POPS

DisallowedContent:
	db 0
